# energy_data

./: .gitignore  manage.py  pyproject.toml  readme.md
common/: models.py  utils.py  views.py
common/migrations/: 0001_initial.py  0002_auto_20200418_1105.py  0003_consumption_meter.py
common/templates/: explorer.html  uploader.html  visualizer.html
docker_deployment/: docker-compose.yml
energy_data/: asgi.py  settings.py  urls.py  wsgi.py
