[tool.poetry]
name = "energy_data"
version = "0.1.0"
description = "An app for visualizing building energy data from meters"
authors = ["Patrick Kelly <pmkelly4444@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
psycopg2 = "^2.8.5"
django-extensions = "^2.2.9"
djangorestframework = "^3.11.0"
django_tables2 = "^2.3.1"
django-bootstrap3 = "^12.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.4.1"
pylint-django = "^2.0.15"
pytest-django = "^3.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
